Fix shining effect overflowing

--- a/src/scss/allPartsList.scss
+++ b/src/scss/allPartsList.scss
@@ -52,6 +52,7 @@
             transparent
           );
           transform: skewX(-20deg);
+          overflow: hidden;
         }
         &:hover::after {
           animation: shine 0.8s ease;
